# arsenic

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/: index.rst
docs/howto/: action_chains.py  pytest.rst  test_pytest.py  windows.rst
docs/reference/: connection.rst  supported-browsers.rst
docs/tutorials/: helloworld.py
packaging/: wapiti-arsenic.spec
packaging/debian/: changelog  control  copyright  rules
src/arsenic/: services.py
src/wapiti_arsenic/: __init__.py  actions.py  browsers.py  connection.py  errors.py  http.py  keys.py  services.py  session.py  subprocess.py  utils.py  webdriver.py
tests/: app.py  conftest.py  test_actions.py  test_docs_build.py  test_real_browsers.py  test_services.py  test_subprocess.py  test_utils.py
tests/templates/: keys.html
