[tool.poetry]
name = "wapiti_arsenic"
version = "28.3"
description = "Asynchronous WebDriver client"
authors = ["Jonas Obrist <jonas.obrist@hennge.com>", "Nicolas Surribas <nicolas.surribas@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "wapiti_arsenic", from = "src"}]
homepage = "https://github.com/wapiti-scanner/arsenic/"
repository = "https://github.com/wapiti-scanner/arsenic/"
documentation = "https://arsenic.readthedocs.io/en/latest/"
keywords = ["asyncio"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: AsyncIO",
  "Topic :: Software Development :: Testing",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^23.2"
structlog = "^24"
httpx = "^0.27"
packaging = "^25.0"

[tool.poetry.group.dev.dependencies]
jinja2 = "^3.1"
pytest = "^8"
pytest-asyncio = "^1.0.0"
sphinx = "^7.3"
pytest-cov = "^7.0"
pre-commit = "^3.7"
black = "^25.9.0"
Pillow = "^10.3"
starlette = "^0.48.0"
uvicorn = "^0.38.0"
python-multipart = "^0.0.9"
pylint = "^3.1"

[tool.poetry.scripts]
arsenic-check-ie11 = "wapiti_arsenic.helpers:check_ie11_environment_cli"
arsenic-configure-ie11 = "wapiti_arsenic.helpers:configure_ie11_environment_cli"

[build-system]
requires = ["poetry>=2.1.3"]
build-backend = "poetry.masonry.api"
